--- a/css/time.css
+++ b/css/time.css
@@ -49,6 +49,7 @@ main {
  }
 }
 
+
 .stop {
     --clip-horizontal: 100%;
     --clip-vertical: 94%;
@@ -170,7 +171,7 @@ body {
     line-height: 1.6;
     font-size: 15px;
     color: #7a7a7a;
-    background: #fff;
+    background: #F8F8FF;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
@@ -312,15 +313,15 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     border-color: #ea5757;
     background: #ea5757; }
 .btn.btn-white {
-    background-color: #ffffff; }
+    background-color: #F8F8FF; }
 .btn.btn-white:hover {
     background-color: transparent;
-    border-color: #ffffff;
-    color: #ffffff; }
+    border-color: #F8F8FF;
+    color: #F8F8FF; }
 .btn.btn-outline-white {
-    border: 1px solid #ffffff; }
+    border: 1px solid #F8F8FF; }
 .btn.btn-outline-white:hover {
-    background: #ffffff;
+    background: #F8F8FF;
     color: #f96d6d !important; }
 .btn.btn-outline-black {
     border: 1px solid rgba(0, 0, 0, 0.1); }
@@ -363,7 +364,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     height: 100%;
     position: fixed;
     z-index: 7100;
-    background: #ffffff;
+    background: #F8F8FF;
     top: 0;
     left: 0;
     right: 0;
@@ -468,7 +469,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     padding: 20px 0;
     margin-top: 20px;
     margin-left: 0px;
-    background: #ffffff;
+    background: #F8F8FF;
     -webkit-transition: 0.2s 0s;
     -o-transition: 0.2s 0s;
     transition: 0.2s 0s; }
@@ -487,7 +488,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .site-nav .site-navigation .site-menu .has-children .dropdown.arrow-top:before {
     display: none;
     border-color: rgba(136, 183, 213, 0);
-    border-bottom-color: #ffffff;
+    border-bottom-color: #F8F8FF;
     border-width: 10px;
     margin-left: -10px; }
 .site-nav .site-navigation .site-menu .has-children .dropdown a {
@@ -523,7 +524,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:hover > a, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:active > a, .site-nav .site-navigation .site-menu .has-children .dropdown > li.has-children:focus > a {
     color: #f96d6d; }
 .site-nav .site-navigation .site-menu .has-children:hover > a, .site-nav .site-navigation .site-menu .has-children:focus > a, .site-nav .site-navigation .site-menu .has-children:active > a {
-    color: #ffffff; }
+    color: #F8F8FF; }
 .site-nav .site-navigation .site-menu .has-children:hover, .site-nav .site-navigation .site-menu .has-children:focus, .site-nav .site-navigation .site-menu .has-children:active {
     cursor: pointer; }
 .site-nav .site-navigation .site-menu .has-children:hover > .dropdown, .site-nav .site-navigation .site-menu .has-children:focus > .dropdown, .site-nav .site-navigation .site-menu .has-children:active > .dropdown {
@@ -569,7 +570,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     right: 0;
     z-index: 2000;
     padding-top: 20px;
-    background: #ffffff;
+    background: #F8F8FF;
     height: calc(100vh);
     -webkit-transform: translateX(100%);
     -ms-transform: translateX(100%);
@@ -746,7 +747,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     opacity: 1; }
 
 .burger.light:before, .burger.light span, .burger.light:after {
-    background-color: #ffffff; }
+    background-color: #F8F8FF; }
 
 .burger:before, .burger:after {
     -webkit-transition: top 0.35s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.35s cubic-bezier(0.23, 1, 0.32, 1), background-color 1.15s cubic-bezier(0.86, 0, 0.07, 1), -webkit-transform 0.35s cubic-bezier(0.23, 1, 0.32, 1);
@@ -796,7 +797,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     outline: none; }
 
 .overlay-svg {
-    background-image: url("../images/overlay.svg");
+    background-image: url("../images/overlay.png");
     background-position: center center;
     background-repeat: no-repeat;
     position: absolute;
@@ -813,12 +814,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     padding: 15px;
     margin-top: -150px;
     position: relative;
-    background-color: #ffffff; }
+    background-color: #F8F8FF; }
 
 .custom-feature {
     -webkit-box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1);
     box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1);
-    background: #ffffff;
+    background: #F8F8FF;
     text-align: center;
     padding: 30px;
     border-radius: 4px; }
@@ -851,7 +852,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     position: relative;
     z-index: 1; }
 .section-stack .image-stack__item--top img {
-    border: 4px solid #ffffff;
+    border: 4px solid #F8F8FF;
     -webkit-box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1);
     box-shadow: 0 15px 30px -10px rgba(0, 0, 0, 0.1); }
 .section-stack .image-stack__item--bottom {
@@ -862,7 +863,6 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
         display: -ms-grid;
         display: grid;
         position: relative;
-        -ms-grid-columns: (1fr)[12];
         grid-template-columns: repeat(12, 1fr); }
     .section-stack .image-stack__item--bottom {
         grid-column: 4 / -1;
@@ -905,7 +905,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     background: rgba(0, 0, 0, 0.4); }
 
 .pricing {
-    background: #ffffff;
+    background: #F8F8FF;
     padding: 30px; }
 .pricing .price > span {
     color: #cccccc; }
@@ -937,7 +937,11 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     color: #f96d6d; }
 
 .site-section {
-    padding: 5rem 0; }
+    padding: 5rem 0;
+    box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
+background-color:#F8F8FF ;
+
+}
 
 .hero {
     padding: 70px 0;
@@ -970,7 +974,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .hero .quote {
     padding: 50px;
     background: #000839;
-    color: #ffffff;
+    color: #F8F8FF;
     width: 100%;
     bottom: -20px;
     left: -50px;
@@ -1038,7 +1042,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .site-blocks-cover h1 {
     font-size: 3rem;
     font-weight: 400;
-    color: #ffffff;
+    color: #F8F8FF;
     font-weight: 900; }
 @media (max-width: 991.98px) {
     .site-blocks-cover h1 {
@@ -1050,14 +1054,14 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     font-weight: 300; }
 .site-blocks-cover a {
     color: rgba(255, 255, 255, 0.5);
-    border-bottom: dotted 1px #ffffff; }
+    border-bottom: dotted 1px #F8F8FF; }
 .site-blocks-cover a:hover {
-    color: #ffffff; }
+    color: #F8F8FF; }
 .site-blocks-cover .btn {
-    color: #ffffff; }
+    color: #F8F8FF; }
 .site-blocks-cover .btn:hover {
-    border-color: #ffffff;
-    background-color: #ffffff;
+    border-color: #F8F8FF;
+    background-color: #F8F8FF;
     color: #f96d6d; }
 .site-blocks-cover .desc {
     font-size: 1.4rem;
@@ -1088,7 +1092,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .count-numbers .number {
     font-size: 40px;
     font-weight: bold;
-    color: #ffffff; }
+    color: #F8F8FF; }
 
 .count-numbers span {
     color: rgba(255, 255, 255, 0.7); }
@@ -1108,7 +1112,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     font-family: "Montserrat", sans-serif;
     font-size: 18px;
     font-weight: bold;
-    color: #ffffff;
+    color: #F8F8FF;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -1168,7 +1172,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 
 /*--------- Start Portfolio Area -------------*/
 .portfolio-area .primary-btn {
-    color: #ffffff;
+    color: #F8F8FF;
     background-color: #f96d6d;
     margin-left: auto;
     margin-right: auto; }
@@ -1325,7 +1329,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     opacity: 1;
     visibility: visible; }
 .isotope-card > a:hover .contents h3 {
-    color: #ffffff; }
+    color: #F8F8FF; }
 .isotope-card .contents {
     position: absolute;
     top: 50%;
@@ -1380,7 +1384,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .isotope-card .relative {
     margin-bottom: 20px; }
 .isotope-card .contents h3 {
-    color: #ffffff;
+    color: #F8F8FF;
     font-size: 18px; }
 .isotope-card .contents .cat {
     color: #b3b3b3; }
@@ -1411,7 +1415,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     box-shadow: 0 15px 30px -5px rgba(0, 0, 0, 0.2); }
 .main-slider .owl-nav .owl-prev span, .main-slider .owl-nav .owl-next span, .custom-slider .owl-nav .owl-prev span, .custom-slider .owl-nav .owl-next span {
     display: block;
-    background: #ffffff;
+    background: #F8F8FF;
     padding: 15px; }
 .main-slider .owl-nav .owl-prev:hover, .main-slider .owl-nav .owl-next:hover, .custom-slider .owl-nav .owl-prev:hover, .custom-slider .owl-nav .owl-next:hover {
     -webkit-box-shadow: 0 7px 15px -5px rgba(0, 0, 0, 0.2);
@@ -1451,7 +1455,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     padding: 20px;
     border-radius: 4px;
     border-bottom-left-radius: 0;
-    background: #ffffff;
+    background: #F8F8FF;
     position: relative;
     top: 0;
     -webkit-transition: .3s all ease;
@@ -1488,7 +1492,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     border-radius: 20px;
     position: relative;
     color: #f96d6d;
-    background-color: #ffffff; }
+    background-color: #F8F8FF; }
 .service-2 .service-icon > svg {
     position: absolute;
     top: 50%;
@@ -1519,7 +1523,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .service-2.link .service-contents *:last-child {
     margin-bottom: 0; }
 .service-2.link:hover, .service-2.link.active {
-    background: #ffffff;
+    background: #F8F8FF;
     -webkit-box-shadow: 0 4px 10px -4px rgba(0, 0, 0, 0.05);
     box-shadow: 0 4px 10px -4px rgba(0, 0, 0, 0.05); }
 .service-2.link:hover .service-icon, .service-2.link.active .service-icon {
@@ -1529,7 +1533,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     position: relative;
     overflow: hidden; }
 .service-2.link.active .service-icon {
-    color: #ffffff;
+    color: #F8F8FF;
     background-color: #f96d6d; }
 
 .section-grey {
@@ -1554,7 +1558,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     font-size: 14px; }
 
 .slider-team-wrap .owl-dots {
-    position: absolutre;
+    position: absolute;
     margin-top: 30px; }
 
 .slider-team-wrap .slider-nav a {
@@ -1570,7 +1574,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     -o-transition: .2s all ease;
     transition: .2s all ease; }
 .slider-team-wrap .slider-nav a span {
-    color: #ffffff;
+    color: #F8F8FF;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -1578,7 +1582,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
 .slider-team-wrap .slider-nav a:hover {
-    background: #ffffff;
+    background: #F8F8FF;
     top: -2px; }
 .slider-team-wrap .slider-nav a:hover span {
     color: #f96d6d; }
@@ -1598,14 +1602,14 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     width: 20px;
     height: 20px;
     background: transparent;
-    color: #ffffff;
+    color: #F8F8FF;
     line-height: 1.6;
     text-align: center;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease; }
 .more:hover {
-    color: #ffffff; }
+    color: #F8F8FF; }
 .more:hover span {
     background: #f96d6d; }
 .more.dark {
@@ -1615,7 +1619,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .more.dark:hover {
     color: #f96d6d; }
 .more.dark:hover span {
-    color: #ffffff;
+    color: #F8F8FF;
     background: #f96d6d; }
 
 .article {
@@ -1697,14 +1701,14 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .comment-list li .comment-body .reply {
     padding: 7px 12px;
     background: #cccccc;
-    color: #ffffff;
+    color: #F8F8FF;
     text-transform: uppercase;
     border-radius: 30px;
     font-size: 10px;
     font-weight: 900;
     letter-spacing: .1rem; }
 .comment-list li .comment-body .reply:hover {
-    color: #ffffff;
+    color: #F8F8FF;
     background: #8c8c8c; }
 
 .categories_tags {
@@ -1731,7 +1735,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     padding-bottom: 100px !important; }
 
 .floating-block {
-    background: #ffffff;
+    background: #F8F8FF;
     -webkit-box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.05);
     box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.05);
     width: 100%;
@@ -1765,7 +1769,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .hero-slant .sign-up-form {
     padding: 10px;
     border-radius: 7px;
-    background: #ffffff;
+    background: #F8F8FF;
     -webkit-box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.1); }
 .hero-slant .sign-up-form .form-control {
@@ -1815,7 +1819,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     padding: 4px 10px;
     font-weight: 700;
     border-radius: 30px;
-    color: #ffffff; }
+    color: #F8F8FF; }
 .pricing-section .period {
     font-size: 14px; }
 .pricing-section .period-toggle {
@@ -1843,7 +1847,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     border-radius: 50%;
-    background: #ffffff;
+    background: #F8F8FF;
     -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1); }
 .pricing-section .period-toggle.active:before {
@@ -1858,7 +1862,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 .pricing-section .pricing-item .description {
     margin-bottom: 20px; }
 .pricing-section .pricing-item.active {
-    background: #ffffff;
+    background: #F8F8FF;
     -webkit-box-shadow: 0 10px 30px -7px rgba(0, 0, 0, 0.1);
     box-shadow: 0 10px 30px -7px rgba(0, 0, 0, 0.1);
     border-radius: 7px; }
@@ -1931,7 +1935,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
 
 .testimonial--wrap {
     padding: 40px 40px 70px 40px;
-    background: #ffffff;
+    background: #F8F8FF;
     border-radius: 7px;
     -webkit-box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.05);
     box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.05); }
@@ -2040,7 +2044,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     padding-left: 40px;
     border-radius: 0;
     position: relative;
-    background: #ffffff; }
+    background: #F8F8FF; }
 .custom-accordion .accordion-item .btn-link:before {
     font-family: 'icomoon';
     content: "\f196";
@@ -2175,7 +2179,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); }
 .social-icons li a:hover {
-    color: #ffffff; }
+    color: #F8F8FF; }
 .social-icons li:first-child a {
     padding-left: 0; }
 
