--- a/css/contact.css
+++ b/css/contact.css
@@ -177,7 +177,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
     left: 30px;
     right: 30px;
     z-index: 99;
-    padding: 10px 0; /* Espacement intérieur en haut et en bas */
+    padding: 10px 0;
+    /* Espacement intérieur en haut et en bas */
 }
 
 .menu-absolute {
@@ -2112,7 +2113,8 @@ textarea {
     position: relative;
     width: 100%;
     min-height: 100vh;
-    padding: 2rem;
+    height: 120%;
+    padding: 5rem;
     background: linear-gradient(to bottom right, rgb(79, 63, 70, 0.7), rgba(229, 231, 230, 0.6));
     box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.6);
     overflow: hidden;
@@ -2440,8 +2442,9 @@ textarea.input {
 }
 
 @media (max-width: 480px) {
-    .container {
-        padding: 1.5rem;
+    .containercontact {
+        padding: 4rem 1.5rem 1.5rem;
+
     }
 
     .contact-info:before {
